Fix weird white lines in buttons on Firefox

--- a/web/www-data/dark-theme.css
+++ b/web/www-data/dark-theme.css
@@ -151,7 +151,7 @@ a:hover {
 	-webkit-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
 	box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
 	background: #111;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(0, 0, 0, 0.9) 0%,
 				rgba(20, 20, 20, 0.9) 50%,
 				rgba(30, 30, 30, 0.9) 50%,
@@ -169,7 +169,7 @@ a:hover {
 }
 .toolbar ul li a:hover {
 	background: #222;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(20, 20, 20, 0.9) 0%,
 				rgba(40, 40, 40, 0.9) 50%,
 				rgba(50, 50, 50, 0.9) 50%,
@@ -183,7 +183,7 @@ a:hover {
 }
 .toolbar ul li a:active {
 	background: #000;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(0, 0, 0, 0.9) 0%,
 				rgba(10, 10, 10, 0.9) 50%,
 				rgba(20, 20, 20, 0.9) 50%,
@@ -447,7 +447,7 @@ a:hover {
 	-webkit-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
 	box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
 	background: #111;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(0, 0, 0, 0.9) 0%,
 				rgba(20, 20, 20, 0.9) 50%,
 				rgba(30, 30, 30, 0.9) 50%,
@@ -465,7 +465,7 @@ a:hover {
 }
 .control-button:hover {
 	background: #222;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(20, 20, 20, 0.9) 0%,
 				rgba(40, 40, 40, 0.9) 50%,
 				rgba(50, 50, 50, 0.9) 50%,
@@ -480,7 +480,7 @@ a:hover {
 }
 .control-button:active {
 	background: #000;
-	background: -moz-linear-gradient(0% 100% 90deg, #FFFFFF, #000000,
+	background: -moz-linear-gradient(0% 100% 90deg, #000000,
 				rgba(0, 0, 0, 0.9) 0%,
 				rgba(10, 10, 10, 0.9) 50%,
 				rgba(20, 20, 20, 0.9) 50%,
